tests/ui/uninhabited/uninhabited-patterns.stderr
error: unreachable pattern
  --> $DIR/uninhabited-patterns.rs:30:9
   |
LL |         Ok(box _) => (),
   |         ^^^^^^^^^
   |
   = note: this pattern matches no values because `NotSoSecretlyEmpty` is uninhabited
note: the lint level is defined here
  --> $DIR/uninhabited-patterns.rs:4:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/uninhabited-patterns.rs:39:9
   |
LL |         Err(Ok(_y)) => (),
   |         ^^^^^^^^^^^
   |
   = note: this pattern matches no values because `NotSoSecretlyEmpty` is uninhabited

error: unreachable pattern
  --> $DIR/uninhabited-patterns.rs:42:15
   |
LL |     while let Some(_y) = foo() {
   |               ^^^^^^^^
   |
   = note: this pattern matches no values because `NotSoSecretlyEmpty` is uninhabited

error: aborting due to 3 previous errors

